--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-paramiko>=3.4.0
-python-dotenv>=1.1.0
+tkinter>=8.6
+matplotlib>=3.8.0
+networkx>=3.0
+python-dotenv>=1.0.0
+paramiko>=3.3.1
 requests>=2.31.0
